apps/media/homarr/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homarr-frame-headers
  namespace: media
spec:
  headers:
    customResponseHeaders:
      X-Frame-Options: ""
      Content-Security-Policy: "frame-ancestors 'self' https://jellyfin.thijsvdweijer.nl"
