apps/media/homarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:latest
          ports:
            - containerPort: 7575
          volumeMounts:
            - name: config
              mountPath: /appdata
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homarr-config
