apps/media/homarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homarr.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: homarr
          port: 7575
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homarr.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: homarr
          port: 7575
      middlewares:
        - name: homarr-frame-headers
  tls:
    secretName: homarr-tls
